--- a/transit-routing-backend/src/main/resources/application.yml
+++ b/transit-routing-backend/src/main/resources/application.yml
@@ -1,9 +1,34 @@
 server:
   port: 8080
 
-
 spring:
   application:
-    name: transit-routing-backend
+    name: global-transit
 
+#datbase to connect
+  datasource:
+    url: jdbc:postgresql://localhost:5434/transit
+    username: transit
+    password: transit_db
+    driver-class-name: org.postgresql.Driver
 
+  jpa:
+    hibernate:
+      ddl-auto: update #create tables, update, do not delete
+    properties:
+      hibernate:
+        dialect: org.hibernate.spatial.dialect.postgis.PostgisDialect
+        format_sql: true
+        jdbc:
+          time_zone: UTC
+    show-sql: true
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.orm.jdbc.bind: trace
