Removed unused `findDirectTrips` method from `TripSearchService`, corrected city parameter naming in repositories, updated error logging in `StopTimeFileProcessor`, replaced `findByDepartureWindow` logic with a placeholder return value, and renamed `Kraków` to `Krakow` in the config file.

--- a/transit-routing-backend/src/main/resources/application.yml
+++ b/transit-routing-backend/src/main/resources/application.yml
@@ -38,7 +38,7 @@ logging:
 
 gtfs:
   cities:
-    Kraków:
+    Krakow:
       KRK_A: https://gtfs.ztp.krakow.pl/GTFS_KRK_A.zip
       KRK_T: https://gtfs.ztp.krakow.pl/GTFS_KRK_T.zip
       KRK_M: https://gtfs.ztp.krakow.pl/GTFS_KRK_M.zip
